--- a/landing.html
+++ b/landing.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
     <title>Garfield Pet Shop</title>
 </head>
 <body>
     <div class="contenedor">
-        <a href='#' class="boton-inicio_sesion">Iniciar sesión</a>
+        <a href='login/login.html' class="boton-inicio_sesion">Iniciar sesión</a>
         <div class="contenido">
+            <img src="img/logo.jpg" alt="">
             <h1>Garfield Pet shop</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum similique tempore exercitationem repellat ea doloremque voluptatum ad necessitatibus perferendis nihil nobis ipsam, delectus vitae corrupti, sunt quod iusto cum non?</p>
         </div>
     </div>
 </body>
