--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         </div>
     </div>
 
+    <div class="parallax-img">
+        <img src="img/parallax.png" alt="">
+    </div>
+
     <!--Parallax-->
 
     <!--Separador-->
