--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,9 +20,7 @@
         </div>
     </div>
 
-    <div class="parallax-img">
-        <img src="img/parallax.png" alt="">
-    </div>
+    
 
     <!--Parallax-->
 
