--- a/panel/modules/welcome/welcome.html
+++ b/panel/modules/welcome/welcome.html
@@ -8,8 +8,8 @@
     <title>panelWelcome</title>
 </head>
 <body>
-    <div class="container">
-        <div class="content">
+    <div class="welcome-container">
+        <div class="welcome-content">
             <img draggable="false" src="../../../img/logo.jpg" alt="">
             <h2>Garfield Pet Shop</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti odio iste expedita perferendis sed ratione ipsam laborum voluptate, facilis inventore earum eos dolores, aliquid distinctio. Aperiam odit aliquid adipisci alias!</p>
