--- a/panel/panel.html
+++ b/panel/panel.html
@@ -204,10 +204,11 @@
     <!--Content display...-->
 
     <div class="container">
-        <div class="content">
-            <div class="iframe-container">
-                <iframe src="modules/welcome/welcome.html" frameborder="0" name="contenido"></iframe>
-            </div>
+        <div class="dummy-sidebar">
+
+        </div>
+        <div class="iframe-container">
+            <iframe src="modules/welcome/welcome.html" frameborder="0" name="contenido"></iframe>
         </div>
     </div>
 
