--- a/panel/panel.html
+++ b/panel/panel.html
@@ -119,7 +119,7 @@
 
             <div class="dropdown-content">
                 <div class="content">
-                    <a href="modules/Modulo servicio/moduloservicio.html" onclick="sidebarToggle()" target="contenido">Lista de Servicios</a>
+                    <a href="modules/ModuloServicios/servicios.html" onclick="sidebarToggle()" target="contenido">Lista de Servicios</a>
                     <a href="" target="contenido" onclick="sidebarToggle()">Otra cosa</a>
                 </div>
             </div>
