--- a/panel/modules/Modulo servicio/modificarServicio.html
+++ b/panel/modules/Modulo servicio/modificarServicio.html
@@ -19,7 +19,7 @@
             </div>
             <div class="contenedor-input">
                 <div class="input-label">
-                <label for="">Nombres</label>
+                <label for="">Nombre</label>
                 <input type="text" placeholder="">
                 </div>
                 <div class="input-label">
@@ -33,7 +33,9 @@
                 </div>
     <div class="boton">
         <form action="">
-            <input type="submit" value="Modificar">
+            <div class="button24">
+                <input type="submit" value="Modificar">
+            </div>
         </form>
     </div>
     </div>
