--- a/panel/modules/ModuloMascota/Mascota/add/add.html
+++ b/panel/modules/ModuloMascota/Mascota/add/add.html
@@ -59,23 +59,23 @@
                     </div>
                     <div class="input">
                         <label for="lastname">Raza</label>
-                        <input type="lastname" name="lastname" id="lastname">
+                        <input type="text" name="lastname" id="lastname">
                     </div>
                     <div class="input">
-                        <label for="email">Fecha de nacimiento</label>
-                        <input type="email" name="email" id="email">
+                        <label for="date">Fecha de nacimiento</label>
+                        <input type="date" name="email" id="email">
                     </div>
                     <div class="input">
-                        <label for="phone">Sexo</label>
-                        <input type="phone" name="phone" id="phone">
+                        <label for="text">Sexo</label>
+                        <input type="text" name="phone" id="phone">
                     </div>
                     <div class="input">
-                        <label for="addres">Tamaño</label>
-                        <input type="addres" name="addres" id="addres">
+                        <label for="text">Tamaño</label>
+                        <input type="text" name="addres" id="addres">
                     </div>
                     <div class="input">
                         <label for="date">Pelaje</label>
-                        <input type="date" name="date" id="date">
+                        <input type="text" name="date" id="date">
                     </div>
                     <div class="input">
                         <label for="estate">Peso</label>
